# giv

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REPRODUCIBLE.md  SECURITY.md  build.rs  clippy.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
docs/: Characters.md  JSON.md  Usage.md
scripts/: get_pi.py
src/: build_info.rs  c_date.rs  c_key.rs  c_pi.rs  c_uuid.rs  cli.rs  error.rs  lib.rs  main.rs  output.rs
src/app/: commands.rs  context.rs  mod.rs
src/app/cli/: args.rs  commands.rs
src/app/output/: mod.rs  output_trait.rs  outputer.rs
src/bytes/: encoding.rs  mod.rs  output.rs
src/c_bytes/: encoding.rs  mod.rs  output.rs
src/c_chars/: mod.rs  output.rs  patterns.rs
src/c_date/: date_format.rs  mod.rs  output.rs
src/c_key/: mod.rs  output.rs
src/c_pi/: decimals.rs  mod.rs  output.rs
src/c_rng/: execute.rs  mod.rs  output.rs  result.rs  spec.rs
src/c_uuid/: mod.rs  output.rs
src/chars/: mod.rs  output.rs  patterns.rs
src/date/: date_kind.rs  mod.rs  output.rs
src/key/: mod.rs  output.rs
src/lorem/: mod.rs  output.rs
src/pi/: mod.rs  output.rs
src/rng/: execute.rs  generator.rs  mod.rs  output.rs  result.rs
src/uuid/: format.rs  generate.rs  mod.rs  output.rs  version.rs
