[package]
name = "giv"
version = "0.1.0"
edition = "2024"
description = "A CLI for generating useful values."
authors = ["Adam Mill <hismajesty@theroyalwhee.com>"]
homepage = "https://www.theroyalwhee.com#giv"
license = "Apache-2.0"
rust-version = "1.88.0"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
bare_urls = "warn"
redundant_explicit_links = "warn"

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
missing_docs_in_private_items = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
missing_safety_doc = "warn"

[dependencies]
# General.
thiserror = "2.0.12"
# Types.
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
    "serde",
], optional = true }
uuid = { version = "1.17.0", features = ["v7", "serde"], optional = true }
# Logging.
env_logger = "0.11.8"
log = "0.4.27"
# CLI and Terminal.
clap = { version = "4.5.35", features = ["derive"] }
# Security.
rand = { version = "0.9.0", optional = true }
# Serialziation.
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", features = [
    "preserve_order",
    "arbitrary_precision",
], optional = true }

[features]
default = ["full"]
full = [
    # Commands.
    "date",
    "key",
    "pi",
    "uuid",
    # Options.
    "json",
]
# Command features.
date = ["dep:chrono"]
key = ["dep:rand"]
pi = []
uuid = ["dep:uuid"]
# Option features.
json = ["dep:serde_json", "dep:serde"]

[profile.release]
codegen-units = 1
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
