[package]
name = "giv"
version = "0.2.0"
edition = "2024"
description = "A CLI for generating useful values."
authors = ["Adam Mill <hismajesty@theroyalwhee.com>"]
repository = "https://github.com/theroyalwhee0/giv"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cli", "random", "generator", "uuid", "utility"]
categories = ["command-line-utilities"]
rust-version = "1.85.0"
exclude = ["scripts/"]
build = "build.rs"

[[bin]]
name = "giv"
path = "src/main.rs"
required-features = ["bin"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.rustdoc]
missing_crate_level_docs = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
bare_urls = "deny"
redundant_explicit_links = "deny"

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
missing_docs_in_private_items = "deny"
missing_panics_doc = "deny"
missing_errors_doc = "deny"
missing_safety_doc = "deny"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# General.
thiserror = "2.0.12"
# Types.
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
    "serde",
], optional = true }
uuid = { version = "1.17.0", features = ["v7", "serde"], optional = true }
# Lookups.
emojis = { version = "0.7.2", optional = true }
# CLI and Terminal.
clap = { version = "4.5.35", features = ["derive"] }
# Encoding
base64 = { version = "0.22.1", optional = true }
hex = { version = "0.4.3", optional = true }
# Security.
rand = { version = "0.9.0", optional = true }
# Serialziation.
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", features = [
    "preserve_order",
], optional = true }

[features]
default = ["full", "bin"]
full = [
    # Commands.
    "bytes",
    "chars",
    "date",
    "key",
    "pi",
    "rng",
    "uuid",
    # Options.
    "json",
]
# Binary features.
bin = []
# Command features.
bytes = ["dep:rand", "dep:base64", "dep:hex"]
chars = ["dep:emojis"]
date = ["dep:chrono"]
key = ["dep:rand"]
pi = []
rng = ["dep:rand"]
uuid = ["dep:uuid"]
# Option features.
json = ["dep:serde_json", "dep:serde"]

[build-dependencies]
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
